--- a/pages/19523.html
+++ b/pages/19523.html
@@ -307,10 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>
-</p>
-
-<div class='rightHandSide'>
+    <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
@@ -1094,39 +1091,45 @@ margin-left: 0em;
 
 <p>This is in contrast to the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a>, based on <a class='existingWikiWord' href='/nlab/show/FRW+model'>FRW model</a>-type solutions to <a class='existingWikiWord' href='/nlab/show/Einstein+equation'>Einstein&#39;s equations</a>, where <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <em>is</em> assumed to be spatially homogeneous.</p>
 
-<p>Of course the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> is clearly not <em>exactly</em> homogeneous (due to initial <a class='existingWikiWord' href='/nlab/show/cosmic+microwave+background+radiation'>CMB</a> fluctuation and ensuing <a class='existingWikiWord' href='/nlab/show/structure+formation'>structure formation</a>), but the question is whether on cosmic <a class='existingWikiWord' href='/nlab/show/scale+transformation'>scales</a> the deviation from homogeneity is small enough that it may be neglected, to first approximation, for the purpose of modelling cosmological evolution.</p>
+<p>Of course the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> is clearly not <em>exactly</em> homogeneous (due to initial <a class='existingWikiWord' href='/nlab/show/cosmic+microwave+background+radiation'>CMB</a> fluctuation and ensuing <a class='existingWikiWord' href='/nlab/show/structure+formation'>structure formation</a>), but the question is whether on cosmic <a class='existingWikiWord' href='/nlab/show/scale+transformation'>scales</a> the deviation from homogeneity is small enough that it may be neglected, to first approximation, for the purpose of modelling cosmological evolution, or whether it exerts relevant “backreaction” on the global evolution of spacetime.</p>
+
+<p>It has been shown that the effect of such backreaction is small or invisible if the inhomogenety is modeled in a Newtonian limit, instead of taking <a class='existingWikiWord' href='/nlab/show/general+relativity'>relativity</a> into account (<a href='#Buchert00'>Buchert 00</a>, <a href='#BuchertEhlers95'>Buchert-Ehlers 95</a>), which however is the standard approximation currently used in comparing the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> to data.</p>
 
 <h2 id='effective_dark_energy_from_inhomogeneity'>Effective dark energy from inhomogeneity?</h2>
 
 <p>The <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> assumes that such inhomogeneities may be neglected to zeroth order, and studies <a class='existingWikiWord' href='/nlab/show/structure+formation'>structure formation</a> as a perturbation about a spatially homogeneous <a class='existingWikiWord' href='/nlab/show/FRW+model'>FRW model</a> <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a>.</p>
 
-<p>Given that the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> faces some issues (e.g. <a href='standard+model+of+cosmology#BCKRW15'>BCKRW 15</a>) related to <em><a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a></em> (a <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a>, and possibly related issues such as <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>cosmic inflation</a> or <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a>), it has been suggested that these may be but an artifact of the overly idealistic approximation of cosmic homogeneity, and that a more accurate inhomogeneous cosmology would not need to assume any <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a> (e.g. <a href='#Celerier00'>Célérier 99</a>, <a href='#AlnesAmarzguiouiGron06'>Alnes-Amarzguioui-Gron 06</a>, <a href='#AlnesAmarzguioui06'>Alnes-Amarzguioui 06</a>, <a href='#BuchertLarenaAlimi06'>Buchert-Larena-Alimi 06</a>, <a href='#EnqvistMattsson06'>Enqvist-Mattsson 06</a> <a href='#Buchert07'>Buchert 07</a>, <a href='#Sarkar08'>Sarkar 08</a>, <a href='#Buchert11'>Buchert 11</a>, <a href='#BucherRasanen11'>Buchert-Rasanen 11</a>, <a href='#Scharf13'>Scharf 13</a>, <a href='#Moffat16'>Moffat 16</a>).</p>
+<p>Given that the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a> faces some issues (e.g. <a href='standard+model+of+cosmology#BCKRW15'>BCKRW 15</a>) related to <em><a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a></em> (a <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a>, and possibly related issues such as <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>cosmic inflation</a> or <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a>), it has been suggested that these may be but an artifact of the overly idealistic approximation of cosmic homogeneity, and that a more accurate inhomogeneous cosmology would not need to assume any <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a> (e.g. <a href='#Celerier00'>Célérier 00</a>, <a href='#Buchert00'>Buchert 00</a>, <a href='#Wetterich01'>Wetterich 01</a>, <a href='#Schwarz02'>Schwarz 02</a>, <a href='#Rasanen03'>Rasanen 03</a>, <a href='#AlnesAmarzguiouiGron06'>Alnes-Amarzguioui-Gron 06</a>, <a href='#AlnesAmarzguioui06'>Alnes-Amarzguioui 06</a>, <a href='#BuchertLarenaAlimi06'>Buchert-Larena-Alimi 06</a>, <a href='#EnqvistMattsson06'>Enqvist-Mattsson 06</a> <a href='#Buchert07'>Buchert 07</a>, <a href='#Sarkar08'>Sarkar 08</a>, <a href='#Buchert11'>Buchert 11</a>, <a href='#BuchertRasanen11'>Buchert-Rasanen 11</a>, <a href='#Scharf13'>Scharf 13</a>, <a href='#Moffat16'>Moffat 16</a>).</p>
 
-<p>Inhomogeneity effects seen in numerical simulations are discussed in <a href='#ClesseRoisinFufza17'>Clesse-Roisin-Füzfa 17</a>, <a href='#ACDDK17'>ACDDK 17</a>.</p>
+<p>Review of the field and of attitudes in the community towards this issues is in <a href='#BelejkoKorzynski16'>Belejko-Korzyński 16</a>:</p>
 
-<p>Review of attitudes in the community towards this issues is in <a href='#BelejkoKorzynski16'>Belejko-Korzyński 16</a>.</p>
+<p>Numerical simulations of inhomogeneous cosmoloy are in their infancy (see <a href='#BelejkoKorzynski16'>Belejko-Korzyński 16, p. 7</a>), but include the following: <a href='#ClesseRoisinFufza17'>Clesse-Roisin-Füzfa 17</a>, <a href='#ACDDK17'>ACDDK 17</a>, <a href='#MontanariRasanen17'>Montanari-Rasanen 17</a>. The latter concludes (<a href='#MontanariRasanen17'>p. 20</a>):</p>
+
+<blockquote>
+<p><math class='maruku-mathml' display='inline' id='mathml_111f784723a22bb004347765910348a3220471f7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>the model<math class='maruku-mathml' display='inline' id='mathml_111f784723a22bb004347765910348a3220471f7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> shows an increase of the expansion rate of the right order of magnitude, compared to observations, at late times. <math class='maruku-mathml' display='inline' id='mathml_111f784723a22bb004347765910348a3220471f7_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[...]</annotation></semantics></math>. It is nontrivial that the right order of magnitude in the amplitude and roughly right timescale of the change in the expansion rate follow simply from the known physics of structure formation. However, the model has shortcomings that would need to be overcome for the results to be more than suggestive.</p>
+</blockquote>
 
 <p>If the apparent small positive <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a> (<a class='existingWikiWord' href='/nlab/show/cosmological+constant'>dark energy</a>) were but an artifact of neglecting backreaction of inhomogeneities, some theoretical puzzlements regarding <a class='existingWikiWord' href='/nlab/show/quantum+gravity'>quantum gravity</a> on <a class='existingWikiWord' href='/nlab/show/de+Sitter+spacetime'>de Sitter spacetimes</a> would disappear (see <a href='de+Sitter+spacetime#Rajaraman16'>Rajaraman 16</a> for general discussion and <a href='#DanielssonVanRiet18'>Danielsson-VanRiet 18, p. 27</a> for discussion of <a class='existingWikiWord' href='/nlab/show/perturbative+string+theory+vacuum'>perturbative string theory vacua</a>).</p>
 
 <h2 id='BackreactionDebate'>The “backreaction debate”</h2>
 
-<p>A seminal argument that it <em>is</em> consistent to neglect cosmic inhomogeneity was given by <a href='#GreenWald10'>Green-Wald 10</a>, <a href='#GreenWald13'>Green-Wald 13</a>. This was called into question in <a href='#BuchertEtAl15'>Buchert et al. 15</a>, where it is concluded that the issue is more subtle and remains open. The reply to this criticism by <a href='#GreenWald15'>Green-Wald 15</a> is summarized in <a href='#OstrowskiRoukema15'>Ostrowski-Roukema 15, p. 4</a> as follows:</p>
+<p>A seminal argument that it <em>is</em> consistent to neglect cosmic inhomogeneity was given by <a href='#GreenWald10'>Green-Wald 10</a>, <a href='#GreenWald13'>Green-Wald 13</a>, <a href='#GreenWald16'>Green-Wald 16</a>. This was called into question in <a href='#BuchertEtAl15'>Buchert et al. 15</a>, where it is concluded that the issue is more subtle and remains open. The reply to this criticism by <a href='#GreenWald15'>Green-Wald 15</a> is summarized in <a href='#OstrowskiRoukema15'>Ostrowski-Roukema 15, p. 4</a> as follows:</p>
 
 <blockquote>
 <p>Green and Wald state that their formalism does not apply to situations when</p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_483d5e2bd562eadfff83c4c88cb477f6110fb65f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>*</mo></mrow><annotation encoding='application/x-tex'>\ast</annotation></semantics></math> the actual metric (e.g., at recent epochs) is far from FLRW; or</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_111f784723a22bb004347765910348a3220471f7_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>*</mo></mrow><annotation encoding='application/x-tex'>\ast</annotation></semantics></math> the actual metric (e.g., at recent epochs) is far from FLRW; or</p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_483d5e2bd562eadfff83c4c88cb477f6110fb65f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>*</mo></mrow><annotation encoding='application/x-tex'>\ast</annotation></semantics></math> one wishes to construct an effective metric (or other effective quantities) through some averaging procedure</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_111f784723a22bb004347765910348a3220471f7_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>*</mo></mrow><annotation encoding='application/x-tex'>\ast</annotation></semantics></math> one wishes to construct an effective metric (or other effective quantities) through some averaging procedure</p>
 
 <p>This, in principle, ends the debate about whether backreaction has been excluded as a dark energy candidate: the Green and Wald formalism does not apply to the main body of backreaction research; backreaction remains a viable dark energy candidate.</p>
 </blockquote>
 
 <h2 id='LemaitreTolmanBondi'>Lemaitre-Tolman-Bondi models</h2>
 
-<p>A particular class of examples of inhomogeneous cosmological models are Lemaitre-Tolman-Bondi models, which however require assuming that we inhabit a position close to a singled-out “center” of the universe, usually the center of an assumed cosmic “void”, of low matter density. See e.g. <a href='#Moffat05'>Moffat 05</a>, <a href='#Enkvist07'>Enkvist 07</a>, <a href='#Moffat16'>Moffat 16</a>.</p>
+<p>A particular class of exactly soluable simple examples of inhomogeneous cosmological models are Lemaitre-Tolman-Bondi models. If taken as quasi-realistic models in themselves, these require assuming that we inhabit a position close to a singled-out “center” of the universe, usually the center of an assumed cosmic “void”, of low matter density. See e.g. <a href='#Moffat05'>Moffat 05</a>, <a href='#Enkvist07'>Enkvist 07</a>, <a href='#Moffat16'>Moffat 16</a>.</p>
 
-<p>It has been argued (e.g. <a href='#Moffat16'>Moffat 16, p. 2</a>) that the apparent unlikeliness of such a “spatial coincidence” is relativized on the backdrop of the established “temporal coincidence” that cosmic acceleration seems to start roughly with the onset of <a class='existingWikiWord' href='/nlab/show/structure+formation'>structure formation</a>, and the perceived fine-tunig of the <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a> required in the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a>.</p>
+<p>It has been argued (e.g. <a href='#Moffat16'>Moffat 16, p. 2</a>) that the apparent unlikeliness of such a “spatial coincidence” is relativized in view of the observed “temporal coincidence” that cosmic acceleration seems to start roughly with the onset of <a class='existingWikiWord' href='/nlab/show/structure+formation'>structure formation</a> (the “coincidence problem” of cosmology), and the perceived fine-tuning of the <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a> required in the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -1139,8 +1142,20 @@ margin-left: 0em;
 <h3 id='theory_of_backreaction'>Theory of backreaction</h3>
 
 <ul>
+<li id='BuchertEhlers95'>
+<p><a class='existingWikiWord' href='/nlab/show/Thomas+Buchert'>Thomas Buchert</a>, Juergen Ehlers, <em>Averaging inhomogeneous Newtonian cosmologies</em>, Astron. Astrophys.320:1-7, 1997 (<a href='https://arxiv.org/abs/astro-ph/9510056'>arXiv:astro-ph/9510056</a>)</p>
+</li>
+
+<li id='Buchert00'>
+<p><a class='existingWikiWord' href='/nlab/show/Thomas+Buchert'>Thomas Buchert</a>, <em>On average properties of inhomogeneous cosmologies</em>, Gen.Rel.Grav.9:306-321, 2000 (<a href='https://arxiv.org/abs/gr-qc/0001056'>arXiv:gr-qc/0001056</a>)</p>
+</li>
+
 <li id='BuchertLarenaAlimi06'>
 <p><a class='existingWikiWord' href='/nlab/show/Thomas+Buchert'>Thomas Buchert</a>, Julien Larena, Jean-Michel Alimi, <em>Correspondence between kinematical backreaction and scalar field cosmologies - the ‘morphon field’</em>, Class. Quant. Grav.23:6379-6408, 2006 (<a href='https://arxiv.org/abs/gr-qc/0606020'>arXiv:gr-qc/0606020</a>)</p>
+</li>
+
+<li id='Rasanen08'>
+<p>Syksy Rasanen, <em>Evaluating backreaction with the peak model of structure formation</em>, JCAP 0804:026,2008 (<a href='https://arxiv.org/abs/0801.2692'>arXiv:0801.2692</a>)</p>
 </li>
 
 <li id='GreenWald10'>
@@ -1166,7 +1181,15 @@ margin-left: 0em;
 </li>
 
 <li id='OstrowskiRoukema15'>
-<p>Jan J. Ostrowski, Boudewijn F. Roukema, <em>On the Green and Wald formalism</em>, The Fourteenth Marcel Grossmann Meeting (<a href='https://arxiv.org/abs/1512.02947'>arXiv:1512.02947</a>)</p>
+<p>Jan J. Ostrowski, Boudewijn F. Roukema, <em>On the Green and Wald formalism</em>, The Fourteenth Marcel Grossmann Meeting (<a href='https://arxiv.org/abs/1512.02947'>arXiv:1512.02947</a>, <a href='https://cosmoback.sciencesconf.org/data/program/Ostrowski.pdf'>talk slides pdf</a>)</p>
+</li>
+
+<li id='GreenWald16'>
+<p>Stephen Green, <a class='existingWikiWord' href='/nlab/show/Robert+Wald'>Robert Wald</a>, <em>A Simple, Heuristic Derivation of our “No Backreaction” Results</em>, Classical and Quantum Gravity, Volume 33, Number 12, 2016 (<a href='https://arxiv.org/abs/1601.06789'>arXiv:1601.06789</a>)</p>
+</li>
+
+<li id='MontanariRasanen17'>
+<p>Francesco Montanari, Syksy Rasanen, <em>Evaluating backreaction with the ellipsoidal collapse model</em>, JCAP12(2017)008 (<a href='https://arxiv.org/abs/1710.02451'>arXiv:1710.02451</a>)</p>
 </li>
 </ul>
 
@@ -1181,6 +1204,18 @@ margin-left: 0em;
 <ul>
 <li id='Celerier00'>
 <p>Marie-Noëlle Célérier, <em>Do we really see a cosmological constant in the supernovae data?</em>, Astron.Astrophys.353:63-71,2000</p>
+</li>
+
+<li id='Wetterich01'>
+<p><span class='newWikiWord'>Christoph Wetterich<a href='/nlab/new/Christoph+Wetterich'>?</a></span>, <em>Can Structure Formation Influence the Cosmological Evolution?</em>, Phys.Rev. D67 (2003) 043513 (<a href='https://arxiv.org/abs/astro-ph/0111166'>arXiv:astro-ph/0111166</a>)</p>
+</li>
+
+<li id='Schwarz02'>
+<p>Dominik J. Schwarz, <em>Accelerated expansion without dark energy</em> (<a href='https://arxiv.org/abs/astro-ph/0209584'>arXiv:astro-ph/0209584</a>)</p>
+</li>
+
+<li id='Rasanen03'>
+<p>Syksy Rasanen, <em>Dark energy from backreaction</em>, JCAP 0402:003, 2004 (<a href='https://arxiv.org/abs/astro-ph/0311257'>arXiv:astro-ph/0311257</a>)</p>
 </li>
 
 <li id='AlnesAmarzguiouiGron06'>
@@ -1259,23 +1294,28 @@ margin-left: 0em;
 </ul>
 
 <p>
+</p>
+
+<p>
  
  
- 
+</p>
+
+<p>
  
 </p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 15, 2018 at 07:54:21.
+  Last revised on July 15, 2018 at 12:57:14.
   See the <a href="https://ncatlab.org/nlab/history/inhomogeneous cosmology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/inhomogeneous+cosmology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/inhomogeneous+cosmology/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/inhomogeneous+cosmology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/inhomogeneous+cosmology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/inhomogeneous+cosmology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/inhomogeneous+cosmology/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/inhomogeneous+cosmology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/inhomogeneous+cosmology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/inhomogeneous cosmology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
