--- a/pages/15413.html
+++ b/pages/15413.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/7226/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -481,7 +480,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/etale+geometric+morphism'>étale geometric morphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+geometric+morphism'>étale geometric morphism</a></p>
 </li>
 
 <li>
@@ -786,19 +785,40 @@ margin-left: 0em;
 
 <h2 id='definition'>Definition</h2>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_878ae44ce9a755dc33d7c2704e380cee949f1a7c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_878ae44ce9a755dc33d7c2704e380cee949f1a7c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> be <a class='existingWikiWord' href='/nlab/show/site'>sites</a>.</p>
-
 <div class='num_defn' id='clp'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/functor'>functor</a> <math class='maruku-mathml' display='inline' id='mathml_878ae44ce9a755dc33d7c2704e380cee949f1a7c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo lspace='verythinmathspace'>:</mo><mi>C</mi><mo>→</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>f \colon C \to D</annotation></semantics></math> is said to have the <em>covering lifting property</em> (<a href='#MacLaneMoerdijk'>MacLane-Moerdijk, p. 410</a>) if for every object <math class='maruku-mathml' display='inline' id='mathml_878ae44ce9a755dc33d7c2704e380cee949f1a7c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi><mo>∈</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>U \in C</annotation></semantics></math> and every <a class='existingWikiWord' href='/nlab/show/cover'>cover</a> <math class='maruku-mathml' display='inline' id='mathml_878ae44ce9a755dc33d7c2704e380cee949f1a7c_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>q</mi> <mi>i</mi></msub><mo>:</mo><msub><mi>V</mi> <mi>i</mi></msub><mo>→</mo><mi>f</mi><mo stretchy='false'>(</mo><mi>U</mi><mo stretchy='false'>)</mo><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{q_i : V_i \to f(U)\}</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_878ae44ce9a755dc33d7c2704e380cee949f1a7c_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo stretchy='false'>(</mo><mi>U</mi><mo stretchy='false'>)</mo><mo>∈</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>f(U) \in D</annotation></semantics></math>, there is a cover <math class='maruku-mathml' display='inline' id='mathml_878ae44ce9a755dc33d7c2704e380cee949f1a7c_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>p</mi> <mi>j</mi></msub><mo>:</mo><msub><mi>U</mi> <mi>j</mi></msub><mo>→</mo><mi>U</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{p_j : U_j \to U\}</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_878ae44ce9a755dc33d7c2704e380cee949f1a7c_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi><mo>∈</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>U \in C</annotation></semantics></math> such that <math class='maruku-mathml' display='inline' id='mathml_878ae44ce9a755dc33d7c2704e380cee949f1a7c_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><mi>f</mi><mo stretchy='false'>(</mo><msub><mi>p</mi> <mi>j</mi></msub><mo stretchy='false'>)</mo><mo>:</mo><mi>f</mi><mo stretchy='false'>(</mo><msub><mi>U</mi> <mi>j</mi></msub><mo stretchy='false'>)</mo><mo>→</mo><mi>f</mi><mo stretchy='false'>(</mo><mi>U</mi><mo stretchy='false'>)</mo><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{f(p_j) : f(U_j) \to f(U)\}</annotation></semantics></math> refines <math class='maruku-mathml' display='inline' id='mathml_878ae44ce9a755dc33d7c2704e380cee949f1a7c_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>q</mi> <mi>i</mi></msub><mo>:</mo><msub><mi>V</mi> <mi>i</mi></msub><mo>→</mo><mi>f</mi><mo stretchy='false'>(</mo><mi>U</mi><mo stretchy='false'>)</mo><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{q_i : V_i \to f(U)\}</annotation></semantics></math> (i.e., if every cover of the image of any <math class='maruku-mathml' display='inline' id='mathml_878ae44ce9a755dc33d7c2704e380cee949f1a7c_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi></mrow><annotation encoding='application/x-tex'>U</annotation></semantics></math> under <math class='maruku-mathml' display='inline' id='mathml_878ae44ce9a755dc33d7c2704e380cee949f1a7c_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> is refined by the image of a cover of <math class='maruku-mathml' display='inline' id='mathml_878ae44ce9a755dc33d7c2704e380cee949f1a7c_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi></mrow><annotation encoding='application/x-tex'>U</annotation></semantics></math>).</p>
+<p><strong>(covering lifting property)</strong></p>
+
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>\mathcal{D}</annotation></semantics></math> be <a class='existingWikiWord' href='/nlab/show/site'>sites</a>. A <a class='existingWikiWord' href='/nlab/show/functor'>functor</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>𝒞</mi><mo>→</mo><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>
+  F \;\colon\; \mathcal{C} \to \mathcal{D}
+
+</annotation></semantics></math></div>
+<p>is said to have the <em>covering lifting property</em> if for every object <math class='maruku-mathml' display='inline' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi><mo>∈</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>U \in \mathcal{C}</annotation></semantics></math> and every <a class='existingWikiWord' href='/nlab/show/cover'>cover</a> <math class='maruku-mathml' display='inline' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>q</mi> <mi>i</mi></msub><mo lspace='verythinmathspace'>:</mo><msub><mi>V</mi> <mi>i</mi></msub><mo>→</mo><mi>F</mi><mo stretchy='false'>(</mo><mi>U</mi><mo stretchy='false'>)</mo><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{q_i \colon V_i \to F(U)\}</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo stretchy='false'>(</mo><mi>U</mi><mo stretchy='false'>)</mo><mo>∈</mo><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>F(U) \in \mathcal{D}</annotation></semantics></math>, there is a cover <math class='maruku-mathml' display='inline' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>p</mi> <mi>j</mi></msub><mo lspace='verythinmathspace'>:</mo><msub><mi>U</mi> <mi>j</mi></msub><mo>→</mo><mi>U</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{p_j \colon U_j \to U\}</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi><mo>∈</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>U \in \mathcal{C}</annotation></semantics></math> such that <math class='maruku-mathml' display='inline' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><mi>f</mi><mo stretchy='false'>(</mo><msub><mi>U</mi> <mi>j</mi></msub><mo stretchy='false'>)</mo><mover><mo>→</mo><mrow><mi>f</mi><mo stretchy='false'>(</mo><msub><mi>p</mi> <mi>j</mi></msub><mo stretchy='false'>)</mo></mrow></mover><mi>f</mi><mo stretchy='false'>(</mo><mi>U</mi><mo stretchy='false'>)</mo><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{f(U_j) \overset{f(p_j)}{\to} f(U)\}</annotation></semantics></math> refines <math class='maruku-mathml' display='inline' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>V</mi> <mi>i</mi></msub><mover><mo>→</mo><mrow><msub><mi>q</mi> <mi>i</mi></msub></mrow></mover><mi>f</mi><mo stretchy='false'>(</mo><mi>U</mi><mo stretchy='false'>)</mo><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{ V_i \overset{q_i}{\to} f(U)\}</annotation></semantics></math> (i.e., if every cover of the image of any <math class='maruku-mathml' display='inline' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi></mrow><annotation encoding='application/x-tex'>U</annotation></semantics></math> under <math class='maruku-mathml' display='inline' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> is refined by the image of a cover of <math class='maruku-mathml' display='inline' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi></mrow><annotation encoding='application/x-tex'>U</annotation></semantics></math>).</p>
 </div>
+
+<p>(<a href='#MacLaneMoerdijk'>MacLane-Moerdijk, p. 410</a>)</p>
 
 <h2 id='properties'>Properties</h2>
 
-<p>A functor between sites with covering lifting property induces a <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a> between the corresponding <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>sheaf toposes</a> covariantly, with <a class='existingWikiWord' href='/nlab/show/inverse+image'>inverse image</a> given by pre-composition with <math class='maruku-mathml' display='inline' id='mathml_878ae44ce9a755dc33d7c2704e380cee949f1a7c_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi></mrow><annotation encoding='application/x-tex'>F</annotation></semantics></math> followed by <a class='existingWikiWord' href='/nlab/show/sheafification'>sheafification</a>. (<a href='#MacLaneMoerdijk'>MacLane-Moerdijk, Theorem VII.10.5</a>)</p>
+<div class='num_prop' id='Smooth0TypeIsSheavesOnSmoothMfd'>
+<h6 id='proposition'>Proposition</h6>
 
-<p>See also: <a href='#Elephant'>The Elephant, Proposition C2.3.18</a>.</p>
+<p>A functor between sites with covering lifting property (Def. <a class='maruku-ref' href='#clp'>1</a>) induces a <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a> between the corresponding <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>sheaf toposes</a> covariantly,</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sh</mi><mo stretchy='false'>(</mo><mi>𝒞</mi><mo stretchy='false'>)</mo><munderover><mo>⊥</mo><munder><mo>⟶</mo><mrow><msub><mi>F</mi> <mo>*</mo></msub></mrow></munder><mover><mo>⟵</mo><mrow><mi>L</mi><msup><mi>F</mi> <mo>*</mo></msup></mrow></mover></munderover><mi>Sh</mi><mo stretchy='false'>(</mo><mi>𝒟</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+  Sh(\mathcal{C})
+    \underoverset
+      {\underset{F_{\ast}}{\longrightarrow}}
+      {\overset{L F^\ast}{\longleftarrow}}
+      {\bot}
+  Sh(\mathcal{D})
+
+</annotation></semantics></math></div>
+<p>with <a class='existingWikiWord' href='/nlab/show/inverse+image'>inverse image</a> given by pre-composition with <math class='maruku-mathml' display='inline' id='mathml_eb99bd409c6596fc3e756bc86b961396397203bf_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> followed by <a class='existingWikiWord' href='/nlab/show/sheafification'>sheafification</a>.</p>
+</div>
+
+<p>(<a href='#MacLaneMoerdijk'>MacLane-Moerdijk, Theorem VII.10.5</a>, <a href='#Elephant'>The Elephant, Proposition C2.3.18</a>).</p>
 
 <h2 id='references'>References</h2>
 
@@ -818,19 +838,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August  8, 2016 12:19:44 
-  by <a class="existingWikiWord" href="/nlab/show/Ulrik+Buchholtz">Ulrik Buchholtz</a>
-  (83.92.86.169)
+  <p>
+  Last revised on July 16, 2018 at 07:58:31.
+  See the <a href="https://ncatlab.org/nlab/history/covering lifting property" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/covering+lifting+property" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/covering+lifting+property/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/covering+lifting+property" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/covering+lifting+property" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/covering+lifting+property" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/covering+lifting+property/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/covering+lifting+property" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/covering+lifting+property" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/covering lifting property/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/covering+lifting+property" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/covering+lifting+property" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/covering+lifting+property" id="view_source" rel="nofollow">Source</a>
