--- a/pages/9206.html
+++ b/pages/9206.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -318,11 +317,11 @@ margin-left: 0em;
 
 <h3 id='as_the_worldvolume_theory_of_the_d4brane'>As the worldvolume theory of the D4-brane</h3>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_2e9c902bb82f9450f738a282f8342a3c8e006365_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>5</mn></mrow><annotation encoding='application/x-tex'>D = 5</annotation></semantics></math> SYM may be regarded as the <a class='existingWikiWord' href='/nlab/show/worldvolume'>worldvolume</a> <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a> on the <a class='existingWikiWord' href='/nlab/show/D4-brane'>D4-brane</a> in <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type II string theory</a>. Thought to be obtained via <a class='existingWikiWord' href='/nlab/show/double+dimensional+reduction'>double dimensional reduction</a> form the <a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-superconformal QFT</a> on the <a class='existingWikiWord' href='/nlab/show/worldvolume'>worldvolume</a> of the <a class='existingWikiWord' href='/nlab/show/M5-brane'>M5-brane</a> (<a href='#Witten11'>Witten 11, section 4 and 5</a>).</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_edd0bdbb320a6ec90c4726fa0cde343f60d8f692_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>5</mn></mrow><annotation encoding='application/x-tex'>D = 5</annotation></semantics></math> SYM may be regarded as the <a class='existingWikiWord' href='/nlab/show/worldvolume'>worldvolume</a> <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a> on the <a class='existingWikiWord' href='/nlab/show/D4-brane'>D4-brane</a> in <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type II string theory</a>. Thought to be obtained via <a class='existingWikiWord' href='/nlab/show/double+dimensional+reduction'>double dimensional reduction</a> from the <a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-superconformal QFT</a> on the <a class='existingWikiWord' href='/nlab/show/worldvolume'>worldvolume</a> of the <a class='existingWikiWord' href='/nlab/show/M5-brane'>M5-brane</a> (<a href='#Witten11'>Witten 11, section 4 and 5</a>).</p>
 
 <h2 id='references'>References</h2>
 
-<p>The theory was introduced/discussd as the <a class='existingWikiWord' href='/nlab/show/double+dimensional+reduction'>double dimensional reduction</a> of the <a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-superconformal QFT</a> on the <a class='existingWikiWord' href='/nlab/show/M5-brane'>M5-brane</a> in sections 4 and 5 of</p>
+<p>The theory was introduced/discussed as the <a class='existingWikiWord' href='/nlab/show/double+dimensional+reduction'>double dimensional reduction</a> of the <a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-superconformal QFT</a> on the <a class='existingWikiWord' href='/nlab/show/M5-brane'>M5-brane</a> in sections 4 and 5 of</p>
 
 <ul id='Witten11'>
 <li><a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Fivebranes and Knots</em> (<a href='http://arxiv.org/abs/1101.3216'>arXiv:1101.3216</a>)</li>
@@ -337,7 +336,7 @@ margin-left: 0em;
 <p>The <a class='existingWikiWord' href='/nlab/show/perturbation+theory'>perturbation theory</a> is considered in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Zvi+Bern'>Zvi Bern</a>, John Joseph Carrasco, <a class='existingWikiWord' href='/nlab/show/Lance+Dixon'>Lance Dixon</a>, <a class='existingWikiWord' href='/nlab/show/Michael+Douglas'>Michael Douglas</a>, Matt von Hippel, Henrik Johansson, <em><math class='maruku-mathml' display='inline' id='mathml_2e9c902bb82f9450f738a282f8342a3c8e006365_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>5</mn></mrow><annotation encoding='application/x-tex'>D = 5</annotation></semantics></math> maximally supersymmetric Yang-Mills theory diverges at six loops</em> (<a href='http://arxiv.org/abs/1210.7709'>arXiv:1210.7709</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Zvi+Bern'>Zvi Bern</a>, John Joseph Carrasco, <a class='existingWikiWord' href='/nlab/show/Lance+Dixon'>Lance Dixon</a>, <a class='existingWikiWord' href='/nlab/show/Michael+Douglas'>Michael Douglas</a>, Matt von Hippel, Henrik Johansson, <em><math class='maruku-mathml' display='inline' id='mathml_edd0bdbb320a6ec90c4726fa0cde343f60d8f692_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>5</mn></mrow><annotation encoding='application/x-tex'>D = 5</annotation></semantics></math> maximally supersymmetric Yang-Mills theory diverges at six loops</em> (<a href='http://arxiv.org/abs/1210.7709'>arXiv:1210.7709</a>)</li>
 </ul>
 
 <p>
@@ -345,19 +344,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 29, 2013 21:13:20 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.139.32)
+  <p>
+  Last revised on July 16, 2018 at 07:07:27.
+  See the <a href="https://ncatlab.org/nlab/history/D=5 super Yang-Mills theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/D%3D5+super+Yang-Mills+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D%3D5+super+Yang-Mills+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/D%3D5+super+Yang-Mills+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D%3D5+super+Yang-Mills+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/D%3D5+super+Yang-Mills+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D%3D5+super+Yang-Mills+theory/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/D%3D5+super+Yang-Mills+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D%3D5+super+Yang-Mills+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/D=5 super Yang-Mills theory/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/D%3D5+super+Yang-Mills+theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/D%3D5+super+Yang-Mills+theory" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/D%3D5+super+Yang-Mills+theory" id="view_source" rel="nofollow">Source</a>
