--- a/pages/3097.html
+++ b/pages/3097.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -324,11 +323,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Arne Strøm, <em>The homotopy category is a homotopy category</em>, Arch. Math. (Basel) 23 (1972), 435–441.</p>
+<p>Arne Strøm, <em>The homotopy category is a homotopy category</em>, Arch. Math. (Basel) 23 (1972), 435–441 <a href='https://web.math.rochester.edu/people/faculty/doug/otherpapers/Strom.pdf'>pdf</a></p>
 </li>
 
 <li>
-<p>V. A. Hinich, V. V. Schechtman, <em>On homotopy limit of homotopy algebras</em>, <math class='maruku-mathml' display='inline' id='mathml_041f5bcf751c725b41c2c89f475f4dc806fd0ea2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math>-theory, arithmetic and geometry (Moscow, 1984–1986), 240–264, Lecture Notes in Math., 1289, Springer, Berlin, 1987.</p>
+<p>V. A. Hinich, V. V. Schechtman, <em>On homotopy limit of homotopy algebras</em>, <math class='maruku-mathml' display='inline' id='mathml_c7f9e7c1b01d243a2465c3a4ab2b72ad83c4934e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math>-theory, arithmetic and geometry (Moscow, 1984–1986), 240–264, Lecture Notes in Math., 1289, Springer, Berlin, 1987.</p>
 </li>
 
 <li>
@@ -358,6 +357,12 @@ margin-left: 0em;
 
 <p>Several more candidates of similar character are listed in the responses to MO question <a href='http://mathoverflow.net/questions/44326/most-memorable-titles'>most-memorable-titles</a>. See also MathOverflow <a href='http://mathoverflow.net/questions/199926/parodies-of-abstruse-mathematical-writing'>parodies-of-abstruse-mathematical-writing</a>.</p>
 
+<p>This one is a little bit out of the category but has a point:</p>
+
+<ul>
+<li>Martin A. Schwartz, <em>The importance of stupidity in scientific research</em> (essay) Journal of Cell Science 2008 121: 1771 <a href='https://dx.doi.org/10.1242/jcs.033340'>doi</a></li>
+</ul>
+
 <p>
 </p>
 
@@ -365,19 +370,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 28, 2016 09:42:39 
-  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
-  (31.45.179.186)
+  <p>
+  Last revised on July 16, 2018 at 10:32:25.
+  See the <a href="https://ncatlab.org/nlab/history/punny title" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/punny+title" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/punny+title/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/punny+title" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/punny+title" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/punny+title" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/punny+title/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/punny+title" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/punny+title" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/punny title/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/punny+title" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/punny+title" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/punny+title" id="view_source" rel="nofollow">Source</a>
