--- a/pages/16814.html
+++ b/pages/16814.html
@@ -587,7 +587,7 @@ margin-left: 0em;
 <p><strong>(fixed point equivalence of an adjunction)</strong></p>
 
 <p>Let</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒟</mi><munderover><mrow><mphantom><mi>AA</mi></mphantom><mo>⊥</mo><mphantom><mi>AA</mi></mphantom></mrow><munder><mo>⟶</mo><mi>R</mi></munder><mover><mo>⟵</mo><mi>L</mi></mover></munderover><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒟</mi><munderover><mrow><mphantom><mi>AA</mi></mphantom><mo>⊥</mo><mphantom><mi>AA</mi></mphantom></mrow><munder><mo>⟶</mo><mi>R</mi></munder><mover><mo>⟵</mo><mi>L</mi></mover></munderover><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>
   \mathcal{D}
     \underoverset
       {\underset{ R }{\longrightarrow}}
@@ -600,13 +600,13 @@ margin-left: 0em;
 
 <ol>
 <li>
-<p>an <a class='existingWikiWord' href='/nlab/show/object'>object</a> <math class='maruku-mathml' display='inline' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi><mo>∈</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>c \in \mathcal{C}</annotation></semantics></math> is a <em>fixed point of the adjunction</em> if its <a class='existingWikiWord' href='/nlab/show/unit+of+an+adjunction'>adjunction unit</a> is an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi><munderover><mo>⟶</mo><mo>≃</mo><mrow><msub><mi>η</mi> <mi>c</mi></msub></mrow></munderover><mi>R</mi><mi>L</mi><mo stretchy='false'>(</mo><mi>c</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<p>an <a class='existingWikiWord' href='/nlab/show/object'>object</a> <math class='maruku-mathml' display='inline' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi><mo>∈</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>c \in \mathcal{C}</annotation></semantics></math> is a <em>fixed point of the adjunction</em> if its <a class='existingWikiWord' href='/nlab/show/unit+of+an+adjunction'>adjunction unit</a> is an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi><munderover><mo>⟶</mo><mo>≃</mo><mrow><msub><mi>η</mi> <mi>c</mi></msub></mrow></munderover><mi>R</mi><mi>L</mi><mo stretchy='false'>(</mo><mi>c</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   c \underoverset{\simeq}{\eta_c}{\longrightarrow} R L (c)
 
 </annotation></semantics></math></div>
 <p>and write</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝒞</mi> <mi>fix</mi></msub><mo>↪</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝒞</mi> <mi>fix</mi></msub><mo>↪</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>
   \mathcal{C}_{fix} \hookrightarrow \mathcal{C}
 
 </annotation></semantics></math></div>
@@ -614,13 +614,13 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>an <a class='existingWikiWord' href='/nlab/show/object'>object</a> <math class='maruku-mathml' display='inline' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>∈</mo><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>d \in \mathcal{D}</annotation></semantics></math> is a <em>fixed point of the adjunction</em> if its <a class='existingWikiWord' href='/nlab/show/unit+of+an+adjunction'>adjunction counit</a> is an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mi>R</mi><mo stretchy='false'>(</mo><mi>d</mi><mo stretchy='false'>)</mo><munderover><mo>⟶</mo><mo>≃</mo><mrow><msub><mi>ϵ</mi> <mi>d</mi></msub></mrow></munderover></mrow><annotation encoding='application/x-tex'>
+<p>an <a class='existingWikiWord' href='/nlab/show/object'>object</a> <math class='maruku-mathml' display='inline' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>∈</mo><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>d \in \mathcal{D}</annotation></semantics></math> is a <em>fixed point of the adjunction</em> if its <a class='existingWikiWord' href='/nlab/show/unit+of+an+adjunction'>adjunction counit</a> is an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mi>R</mi><mo stretchy='false'>(</mo><mi>d</mi><mo stretchy='false'>)</mo><munderover><mo>⟶</mo><mo>≃</mo><mrow><msub><mi>ϵ</mi> <mi>d</mi></msub></mrow></munderover></mrow><annotation encoding='application/x-tex'>
  L R(d) \underoverset{\simeq}{\epsilon_d}{\longrightarrow}
 
 </annotation></semantics></math></div>
 <p>and write</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝒟</mi> <mi>fix</mi></msub><mo>↪</mo><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝒟</mi> <mi>fix</mi></msub><mo>↪</mo><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>
   \mathcal{D}_{fix} \hookrightarrow \mathcal{D}
 
 </annotation></semantics></math></div>
@@ -629,7 +629,7 @@ margin-left: 0em;
 </ol>
 
 <p>Then the <a class='existingWikiWord' href='/nlab/show/adjunction'>adjunction</a> (<a class='existingWikiWord' href='/nlab/show/image'>co</a>-)<a class='existingWikiWord' href='/nlab/show/restriction'>restrics</a> to an <a class='existingWikiWord' href='/nlab/show/adjoint+equivalence'>adjoint equivalence</a> on these <a class='existingWikiWord' href='/nlab/show/full+subcategory'>full subcategories</a> of <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed points</a>:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝒟</mi> <mi>fix</mi></msub><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mo>⊥</mo></msub></mrow></mphantom><msub><mo>≃</mo> <mo>⊥</mo></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>R</mi></munder><mover><mo>⟵</mo><mi>L</mi></mover></munderover><msub><mi>𝒞</mi> <mi>fix</mi></msub></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝒟</mi> <mi>fix</mi></msub><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mo>⊥</mo></msub></mrow></mphantom><msub><mo>≃</mo> <mo>⊥</mo></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>R</mi></munder><mover><mo>⟵</mo><mi>L</mi></mover></munderover><msub><mi>𝒞</mi> <mi>fix</mi></msub></mrow><annotation encoding='application/x-tex'>
   \mathcal{D}_{fix}
     \underoverset
       {\underset{ R }{\longrightarrow}}
@@ -648,15 +648,15 @@ margin-left: 0em;
 
 <ol>
 <li>
-<p>for <math class='maruku-mathml' display='inline' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi><mo>∈</mo><msub><mi>𝒞</mi> <mi>fix</mi></msub><mo>↪</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>c \in \mathcal{C}_{fix} \hookrightarrow \mathcal{C}</annotation></semantics></math> we have that <math class='maruku-mathml' display='inline' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>η</mi> <mrow><mi>R</mi><mo stretchy='false'>(</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>\eta_{R(d)}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a>;</p>
+<p>for <math class='maruku-mathml' display='inline' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi><mo>∈</mo><msub><mi>𝒞</mi> <mi>fix</mi></msub><mo>↪</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>c \in \mathcal{C}_{fix} \hookrightarrow \mathcal{C}</annotation></semantics></math> we have that <math class='maruku-mathml' display='inline' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>η</mi> <mrow><mi>R</mi><mo stretchy='false'>(</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>\eta_{R(d)}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a>;</p>
 </li>
 
 <li>
-<p>for <math class='maruku-mathml' display='inline' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>∈</mo><msub><mi>𝒟</mi> <mi>fix</mi></msub><mo>↪</mo><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>d \in \mathcal{D}_{fix} \hookrightarrow \mathcal{D}</annotation></semantics></math> we have that <math class='maruku-mathml' display='inline' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ϵ</mi> <mrow><mi>L</mi><mo stretchy='false'>(</mo><mi>c</mi><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>\epsilon_{L(c)}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a>.</p>
+<p>for <math class='maruku-mathml' display='inline' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>∈</mo><msub><mi>𝒟</mi> <mi>fix</mi></msub><mo>↪</mo><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>d \in \mathcal{D}_{fix} \hookrightarrow \mathcal{D}</annotation></semantics></math> we have that <math class='maruku-mathml' display='inline' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ϵ</mi> <mrow><mi>L</mi><mo stretchy='false'>(</mo><mi>c</mi><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>\epsilon_{L(c)}</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a>.</p>
 </li>
 </ol>
 
-<p>For the first case we claim that <math class='maruku-mathml' display='inline' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo stretchy='false'>(</mo><msub><mi>η</mi> <mi>d</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>R(\eta_{d})</annotation></semantics></math> provides an <a class='existingWikiWord' href='/nlab/show/inverse'>inverse</a>: by the <a class='existingWikiWord' href='/nlab/show/triangle+identities'>triangle identity</a> (eq:TriangleIdentities) it is a <a class='existingWikiWord' href='/nlab/show/section'>right inverse</a>, but by assumption it is itself an <a class='existingWikiWord' href='/nlab/show/inverse'>invertible morphism</a>, which implies that <math class='maruku-mathml' display='inline' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>η</mi> <mrow><mi>R</mi><mo stretchy='false'>(</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>\eta_{R(d)}</annotation></semantics></math> is an isomorphism.</p>
+<p>For the first case we claim that <math class='maruku-mathml' display='inline' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo stretchy='false'>(</mo><msub><mi>η</mi> <mi>d</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>R(\eta_{d})</annotation></semantics></math> provides an <a class='existingWikiWord' href='/nlab/show/inverse'>inverse</a>: by the <a class='existingWikiWord' href='/nlab/show/triangle+identities'>triangle identity</a> (eq:TriangleIdentities) it is a <a class='existingWikiWord' href='/nlab/show/section'>right inverse</a>, but by assumption it is itself an <a class='existingWikiWord' href='/nlab/show/inverse'>invertible morphism</a>, which implies that <math class='maruku-mathml' display='inline' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>η</mi> <mrow><mi>R</mi><mo stretchy='false'>(</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>\eta_{R(d)}</annotation></semantics></math> is an isomorphism.</p>
 
 <p>The second claim is <a class='existingWikiWord' href='/nlab/show/duality'>formally dual</a>.</p>
 </div>
@@ -664,14 +664,14 @@ margin-left: 0em;
 <h2 id='properties'>Properties</h2>
 
 <ul>
-<li>If the adjunction is <a class='existingWikiWord' href='/nlab/show/idempotent+adjunction'>idempotent</a>, then the fixed objects in <math class='maruku-mathml' display='inline' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> are precisely those of the form <math class='maruku-mathml' display='inline' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mi>d</mi></mrow><annotation encoding='application/x-tex'>G d</annotation></semantics></math>, and dually the fixed objects in <math class='maruku-mathml' display='inline' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>\mathcal{D}</annotation></semantics></math> are those of the form <math class='maruku-mathml' display='inline' id='mathml_37d06ce19d8db46d47632b57e928fcbf1e3bb8c5_18' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mi>c</mi></mrow><annotation encoding='application/x-tex'>F c</annotation></semantics></math>. Indeed, this is essentially the definition of an idempotent adjunction.</li>
+<li>If the adjunction is <a class='existingWikiWord' href='/nlab/show/idempotent+adjunction'>idempotent</a>, then the fixed objects in <math class='maruku-mathml' display='inline' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> are precisely those of the form <math class='maruku-mathml' display='inline' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mi>d</mi></mrow><annotation encoding='application/x-tex'>G d</annotation></semantics></math>, and dually the fixed objects in <math class='maruku-mathml' display='inline' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒟</mi></mrow><annotation encoding='application/x-tex'>\mathcal{D}</annotation></semantics></math> are those of the form <math class='maruku-mathml' display='inline' id='mathml_599fec9c3a3fe4b62f3280fc33653d535a934e00_18' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mi>c</mi></mrow><annotation encoding='application/x-tex'>F c</annotation></semantics></math>. Indeed, this is essentially the definition of an idempotent adjunction.</li>
 </ul>
 
 <h2 id='Examples'>Examples</h2>
 
 <h3 id='GelfandDuality'>Gelfand duality</h3>
 
-<p><a class='existingWikiWord' href='/nlab/show/Gelfand+duality'>Gelfand duality</a> is the fixed point equivalence of an adjunction between <a class='existingWikiWord' href='/nlab/show/compactly+generated+topological+space'>compactly generated</a> <a class='existingWikiWord' href='/nlab/show/Hausdorff+space'>Hausdorff spaces</a> and <a class='existingWikiWord' href='/nlab/show/topological+algebra'>topological algebras</a> over the <a class='existingWikiWord' href='/nlab/show/complex+number'>complex numbers</a>, given by using the <a class='existingWikiWord' href='/nlab/show/complex+number'>complex numbers</a> as <a class='existingWikiWord' href='/nlab/show/dualizing+object'>dualizing object</a> (<a href='#PorstTholen91'>Porst-Tholen 91, section 4-c</a>).</p>
+<p><a class='existingWikiWord' href='/nlab/show/Gelfand+duality'>Gelfand duality</a> is (a further restriction of) the fixed point equivalence of the adjunction between <a class='existingWikiWord' href='/nlab/show/compactly+generated+topological+space'>compactly generated</a> <a class='existingWikiWord' href='/nlab/show/Hausdorff+space'>Hausdorff spaces</a> and <a class='existingWikiWord' href='/nlab/show/topological+algebra'>topological algebras</a> over the <a class='existingWikiWord' href='/nlab/show/complex+number'>complex numbers</a>, given by using the <a class='existingWikiWord' href='/nlab/show/complex+number'>complex numbers</a> as <a class='existingWikiWord' href='/nlab/show/dualizing+object'>dualizing object</a> (<a href='#PorstTholen91'>Porst-Tholen 91, section 4-c</a>).</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -699,7 +699,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 23, 2018 at 05:57:03.
+  Last revised on July 23, 2018 at 06:22:00.
   See the <a href="https://ncatlab.org/nlab/history/fixed point of an adjunction" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
